--- a/_episodes_rmd/02-introLogistic.Rmd
+++ b/_episodes_rmd/02-introLogistic.Rmd
@@ -6,6 +6,7 @@ objectives:
   - "Describe the components that are involved in logistic regression."
   - "Formulate the model equation in terms of the log odds."
   - "Formulate the model equation in terms of the probability of success."
+  - "Express the effect of an explanatory variable in terms of a multiplicative change in the probability of success."
 keypoints:
 questions:
 teaching: 10
@@ -143,6 +144,43 @@ The advantage of this formulation is that our output is in terms of probabilitie
 > > C) 5  
 > > D) 2  
 > > E) 4
+> {: .solution}
+{: .challenge}
+
+As we have seen above, the effect of an explanatory variable is expressed in terms of the log odds of success. For every unit increase in $x_1$, the log odds changes by $\beta_1$. For a different interpretation, we can express the effect of an explanatory variable in terms of *multiplicative change* in the *odds of success*. 
+
+Specifically, $\frac{\text{Pr}(y=1)}{\text{Pr}(y=0)}$ is multiplied by $e^{\beta_1}$ for every unit increase in $x_1$. For example, if $\frac{\text{Pr}(y=1)}{\text{Pr}(y=0)} = 0.2$ at $x=0$ and $\beta_1 = 2$, then at $x=1$ $\frac{\text{Pr}(y=1)}{\text{Pr}(y=0)} = 0.2 \times 2 = 0.4$. In general terms, this relationship is expressed as:
+
+$$
+\frac{\text{Pr}(y=1|x=a+1)}{\text{Pr}(y=0|x=a+1)} = \frac{\text{Pr}(y=1|x=a)}{\text{Pr}(y=0|x=a)} \times e^{\beta_1},
+$$
+
+where $\frac{\text{Pr}(y=1|x=a)}{\text{Pr}(y=0|x=a)}$ is read as the "odds of $y$ being $1$ *given* $x$ being $a$". In this context, $a$ is any value that $x$ can take on. 
+
+Importantly, this means that the change in the odds of success is *not* linear. The change depends on the odds $\frac{\text{Pr}(y=1|x=a)}{\text{Pr}(y=0|x=a)}$. We will exemplify this in the challenge below. 
+
+> ## Exercise  
+> We are given the following odds of success: 
+> $\frac{\text{Pr}(y=1|x=2)}{\text{Pr}(y=0|x=2)} = 0.4$ and 
+> $\frac{\text{Pr}(y=1|x=6)}{\text{Pr}(y=0|x=6)} = 0.9$. We are also given an 
+> estimate of the effect of an explanatory variable: 
+> $\beta_1 = 1.2$.    
+>
+> A) Calculate the expected multiplicative change in the
+> odds of success. An exponential can be calculated in
+> R using `exp()`, e.g. $e^2$ is obtained with `exp(2)`.  
+> B) Calculate $\frac{\text{Pr}(y=1|x=3)}{\text{Pr}(y=0|x=3)}$.    
+> C) Calculate $\frac{\text{Pr}(y=1|x=7)}{\text{Pr}(y=0|x=7)}$.  
+> D) By how much did the odds of success change
+> when going from $x=2$ to $x=3$? And when going from $x=6$
+> to $x=7$?
+>  
+> > ## Solution
+> > A) $e^{1.2} = 3.32$  
+> > B) $\frac{\text{Pr}(y=1|x=3)}{\text{Pr}(y=0|x=3)} = 0.4 \times 3.32 = 1.328$  
+> > C) $\frac{\text{Pr}(y=1|x=7)}{\text{Pr}(y=0|x=7)} = 0.9 \times 3.32 = 2.988$  
+> > D) $1.328 - 0.4 = 0.928$ and $2.988 - 0.9 = 2.088$. So the second change is greater 
+> > than the first change. 
 > {: .solution}
 {: .challenge}
 
