--- a/_episodes_rmd/03-fittingLogistic.Rmd
+++ b/_episodes_rmd/03-fittingLogistic.Rmd
@@ -24,17 +24,23 @@ library(ggplot2)
 library(jtools)
 ```
 
+In this episode we will learn to fit a logistic regression model when we have one binary response variable and one continuous explanatory variable. Before we fit the model, we can explore the relationship between our variables graphically. We are checking whether, on average, observations split along the binary variable appear to differ in the explanatory variable.
+
+Let us take response variable `SmokeNow` and the continuous explanatory variable `Age`as an example. For participants that have smoked at least 100 cigarettes in their life, `SmokeNow` denotes whether they still smoke. The code below drops NAs in the response variable. The plotting is then initiated using `ggplot()`. Inside `aes()`, we select the response variable with `y = SmokeNow` and the continuous explanatory variable with `x = Age`. Finally, violin plots are called using `geom_violin()`.
+
+The plot suggests that on average, participants of younger age are still smoking and participants of older age have given up smoking. We can now proceed with fitting the logistic regression model. 
+
 ```{r explore SmokeNow_Age}
 dat %>%
   drop_na(SmokeNow) %>%
-  ggplot(aes(x = SmokeNow, y = Age)) +
+  ggplot(aes(y = SmokeNow, x = Age)) +
   geom_violin() 
 ```
 
 > ## Exercise  
 > You have been asked to model the relationship between 
 > physical activity (`PhysActive`)
-> and `FEV1` in the NHANES data. Use the ggplot2
+> and `FEV1` in the NHANES data. Use the `ggplot2`
 > package to create an exploratory plot, ensuring that:
 > 1. NAs are discarded from the `PhysActive` variable.  
 > 2. Physical activity (`PhysActive`) on the y-axis and FEV1 
@@ -54,15 +60,36 @@ dat %>%
 > {: .solution}
 {: .challenge}
 
+We fit the model using `glm()`. As with the `lm()` command, we specify our response and explanatory variables with `formula = SmokeNow ~ Age`. In addition, we specify `family = "binomial"` so that a logistic regression model is fit by `glm()`.  
 
 ```{r fit SmokeNow_Age}
 SmokeNow_Age <- dat %>%
   glm(formula = SmokeNow ~ Age, family = "binomial")
 
-summ(SmokeNow_Age)
-
 summ(SmokeNow_Age, exp = TRUE)
 ```
+
+The logistic regression model equation associated with this model has the general form:
+
+$$\text{logit}(E(y)) = \beta_0 + \beta_1 \times x_1.$$
+
+Recall that $\beta_0$ estimates the log odds when $x_1 = 0$ and $\beta_1$ estimates the difference in the log odds associated with a one-unit difference in $x_1$. Using `summ()`, we can obtain estimates for $\beta_0$ and $\beta_1$:
+
+```{r summ SmokeNow_Age}
+summ(SmokeNow_Age, digits = 3)
+```
+
+The equation therefore becomes:
+
+$$\text{logit}(E(\text{PhysActive})) = 2.607 - 0.054 \times \text{Age}.$$
+
+Alternatively, we can express the model equation in terms of the probability of "success": 
+
+$$\text{Pr}(y = 1) = \text{logit}^{-1}(\beta_0 + \beta_1 \times x_1).$$
+
+In this example, $SmokeNow = Yes$ is "success". The equation therefore becomes:
+
+$$\text{Pr}(\text{SmokeNow} = \text{Yes}) = \text{logit}^{-1}(2.607 - 0.054 \times \text{Age}).$$
 
 > ## Exercise  
 > 1. Using the `glm()` command, fit a logistic regression model
