--- a/_episodes_rmd/04-predLogistic.Rmd
+++ b/_episodes_rmd/04-predLogistic.Rmd
@@ -2,8 +2,8 @@
 source: Rmd
 title: "Making predictions from a logistic regression model"
 objectives:
-  - "Calculate a prediction from a logistic regression model using parameter estimates given by the model output."
-  - "Use the `predict()` function to generate predictions from a simple linear regression model."
+  - "Calculate predictions in terms of the log odds and in terms of the probability of success from a logistic regression model using parameter estimates given by the model output."
+  - "Use the `make_predictions()` function from the `jtools` package to generate predictions from a logistic regression model in terms of the log odds and in terms of the probability of success."
 keypoints:
 questions:
 teaching: 10
@@ -14,7 +14,45 @@ execises: 10
 source("../bin/chunk-options.R")
 source("../bin/obtain_data.R")
 knitr_fig_path("04-")
+library(dplyr)
+library(tidyr)
+library(jtools)
 ```
 
 
+```{r model for challenge 2, include=FALSE}
+PhysActive_FEV1 <- dat %>%
+ drop_na(PhysActive) %>%
+ glm(formula = PhysActive ~ FEV1, family = "binomial")
+```
 
+
+>## Exercise
+> Using the `make_predictions()` function and the `PhysActive_FEV1` model:  
+> A) Obtain the log odds of the expectation of physical activity for individuals 
+> with an FEV1 of 2000, 3000 or 4000. Ensure that your predictions include
+> confidence intervals.  
+> B) Exponentiate the log odds at an FEV1 of 3000. How many times more likely
+> is an individual with an FEV1 of 3000 predicted to be physically active?  
+> C) Obtain the probabilities of individuals with an FEV1 of 2000, 3000 or 4000
+> being physically active. Ensure that your predictions include 
+> confidence intervals.
+> 
+> > ## Solution
+> > A) Including `outcome.scale = "link"` gives us predictions on the log odds scale:
+> > ```{r predict log odds from PhysActive_FEV1}
+> > predictionDat <- tibble(FEV1 = c(2000, 3000, 4000))
+> > 
+> > make_predictions(PhysActive_FEV1, new_data = predictionDat,
+> >                  outcome.scale = "link")
+> > ```
+> > 
+> > B) $e^{0.202} = 1.22$, so an individual is 1.22 times more likely to be 
+> > physically active.  
+> > C) Ommitting `outcome.scale = "link"` gives us predictions on the 
+> > probability scale:
+> > ```{r predict probabilities from PhysActive_FEV1}
+> > make_predictions(PhysActive_FEV1, new_data = predictionDat)
+> > ```
+> {: .solution}
+{: .challenge}
