--- a/_episodes_rmd/01-introBinary.Rmd
+++ b/_episodes_rmd/01-introBinary.Rmd
@@ -28,6 +28,31 @@ dat %>%
   mutate(prop = n/sum(n))
 ```
 
+> ## Exercise  
+> You have been asked to study physical activity (`PhysActive`) 
+> in individuals with an FEV1 (`FEV1`) between 3750 and 4250 in the NHANES data. 
+> A) Estimate the probabilitites that someone is or is not physically active
+> for individuals with an FEV1 between 3750 and 4250.   
+> B) What value is $E(\text{PhysActive})$ for individuals 
+> with an FEV1 between 3750 and 4250?
+>
+> > ## Solution
+> > A) To obtain the probabilities:
+> > 
+> > ```{r probabilities PhysActive_FEV1}
+> > dat %>%
+> >   drop_na(PhysActive) %>%
+> >   filter(between(FEV1, 3750, 4250)) %>%
+> >   count(PhysActive) %>%
+> >   mutate(prop = n/sum(n)) 
+> > ```
+> > 
+> > We therefore estimate the probability of physical activity to be 0.61
+> > and the probability of no physical activity to be 0.39.  
+> > 
+> > B) $E(\text{PhysActive}) = Pr(\text{PhysActive} = \text{Yes}) = 0.61$
+> {: .solution}
+{: .challenge}
 
 ```{r}
 dat %>%
