add main body fixes and explanation of odds and log odds code

--- a/_episodes_rmd/01-introBinary.Rmd
+++ b/_episodes_rmd/01-introBinary.Rmd
@@ -53,12 +53,13 @@ dat %>%
 ```
 
 We see that the probability of success is estimated as $0.38$ and the probability
-of failure is estimated as $0.62$. 
+of failure is estimated as $0.62$. In mathematical notation: 
+$\text{Pr}(\text{SmokeNow} = \text{Yes}) = 0.38$ and $\text{Pr}(\text{SmokeNow} = \text{No}) = 0.62$
 
 In the linear regression lessons, we modelled the *expectation* of the outcome 
 variable, $E(y)$. In the case of binary variables, we will also work with the
 expectation of the outcome variable. When $y$ is a binary variable, $E(y)$ is
-equal to the proportion of successes. In our example above, $E(y) = \text{Pr}(\text{SmokeNow} = \text{Yes}) = 0.38$. 
+equal to the probability of success. In our example above, $E(y) = \text{Pr}(\text{SmokeNow} = \text{Yes}) = 0.38$. 
 
 > ## Exercise  
 > You have been asked to study physical activity (`PhysActive`) 
@@ -93,15 +94,15 @@ equal to the proportion of successes. In our example above, $E(y) = \text{Pr}(\t
 > 
 > In mathematical notation, this is indicated by:
 > 
-> $$E(y) = \sum\Big(y_i \times \text{Pr}(y = y_i)\Big)$$
+> $$E(y) = \sum_i\Big(y_i \times \text{Pr}(y = y_i)\Big)$$
 > 
 > In the case of a binary variable, the variable can take on 
 > one of two values: $0$ and $1$. Therefore, the expectation becomes:
 > 
-> $$E(y) = \sum\Big(y_i \times \text{Pr}(y = y_i)\Big) = 0 \times \text{Pr}(y = 0) + 1 \times \text{Pr}(y = 1) = \text{Pr}(y = 1)$$
+> $$E(y) = \sum_i\Big(y_i \times \text{Pr}(y = y_i)\Big) = 0 \times \text{Pr}(y = 0) + 1 \times \text{Pr}(y = 1) = \text{Pr}(y = 1)$$
 > 
 > Since "success" is considered $y=1$, the expectation of a binary variable 
-> therefore equals the probability of success.
+> equals the probability of success.
 > 
 {: .callout}
 
@@ -150,7 +151,13 @@ table below:
 | Odds        | 1.0           | How many times more likely is success than failure? |
 | Log odds    | 0             | If log odds > 0, probability is > 0.5.              |
 
-```{r}
+The odds and the log odds can be calculated in RStudio through an
+extension of the code that we used to calculate the probabilities. 
+From our table of probabilities we isolate the row with the probability
+of success using `filter()`. We then calculate the odds and the log odds
+using the `summarise()` function. 
+
+```{r odds and log odds SmokeNow_Age}
 dat %>%
   drop_na(SmokeNow) %>%
   filter(between(Age, 55, 66)) %>%
