--- a/_episodes_rmd/03-fittingLogistic.Rmd
+++ b/_episodes_rmd/03-fittingLogistic.Rmd
@@ -5,7 +5,7 @@ objectives:
   - "Use the `ggplot2` package to explore the relationship between a binary response variable and a continuous explanatory variable."
   - "Use the `glm()` function to fit a logistic regression model with one continuous explanatory variable."
   - "Use the `summ()` function from the `jtools` package to interpret the model output in terms of the log odds."
-  - "Use the `summ()` function from the `jtools` package to interpret the model output in terms of the odds ratio."
+  - "Use the `summ()` function from the `jtools` package to interpret the model output in terms of the multiplicative change in the odds of success."
   - "Use the `jtools` and `ggplot2` packages to visualise the resulting model."
 keypoints:
 questions:
@@ -44,7 +44,7 @@ dat %>%
 > and `FEV1` in the NHANES data. Use the `ggplot2`
 > package to create an exploratory plot, ensuring that:
 > 1. NAs are discarded from the `PhysActive` variable.  
-> 2. Physical activity (`PhysActive`) on the y-axis and FEV1 
+> 2. Physical activity (`PhysActive`) is on the y-axis and FEV1 
 > (`FEV1`) on the x-axis.
 > 3. This data is shown as a violin plot.  
 > 4. The y-axis is labelled as "Physically active".
@@ -66,8 +66,6 @@ We fit the model using `glm()`. As with the `lm()` command, we specify our respo
 ```{r fit SmokeNow_Age}
 SmokeNow_Age <- dat %>%
   glm(formula = SmokeNow ~ Age, family = "binomial")
-
-summ(SmokeNow_Age, exp = TRUE)
 ```
 
 The logistic regression model equation associated with this model has the general form:
@@ -82,7 +80,7 @@ summ(SmokeNow_Age, digits = 3)
 
 The equation therefore becomes:
 
-$$\text{logit}(E(\text{PhysActive})) = 2.607 - 0.054 \times \text{Age}.$$
+$$\text{logit}(E(\text{SmokeNow})) = 2.607 - 0.054 \times \text{Age}.$$
 
 Alternatively, we can express the model equation in terms of the probability of "success": 
 
@@ -91,6 +89,18 @@ $$\text{Pr}(y = 1) = \text{logit}^{-1}(\beta_0 + \beta_1 \times x_1).$$
 In this example, $\text{SmokeNow} = \text{Yes}$ is "success". The equation therefore becomes:
 
 $$\text{Pr}(\text{SmokeNow} = \text{Yes}) = \text{logit}^{-1}(2.607 - 0.054 \times \text{Age}).$$
+
+Recall that the odds of success, 
+$\frac{\text{Pr}(\text{SmokeNow} = \text{Yes})}{\text{Pr}(\text{SmokeNow} = \text{No})}$, 
+is multiplied by a factor of $e^{\beta_1}$ for every one-unit increase in $x_1$.
+We can find this factor using `summ()`, including `exp = TRUE`:
+
+```{r summ with exp SmokeNow_Age}
+summ(SmokeNow_Age, digits = 3, exp = TRUE)
+```
+
+The model therefore predicts that the odds of success will be multiplied by
+$0.947$ for every one-unit increase in $x_1$
 
 > ## Exercise  
 > 1. Using the `glm()` command, fit a logistic regression model
@@ -105,7 +115,7 @@ $$\text{Pr}(\text{SmokeNow} = \text{Yes}) = \text{logit}^{-1}(2.607 - 0.054 \tim
 > to differ, on average, for a one-unit difference in `FEV1`?  
 > C) Given these values and the names of the response and explanatory
 > variables, how can the general equation $\text{logit}(E(y)) = \beta_0 + \beta_1 \times x_1$ be adapted to represent the model?  
-> D) By how much is $\frac{\text{Pr}(\text{PhysActive}}{\text{Pr}(\text{PhysActive}} = \text{No})$ expected to be multiplied for a one-unit increase in `FEV1?`
+> D) By how much is $\frac{\text{Pr}(\text{PhysActive})}{\text{Pr}(\text{PhysActive})} = \text{No}$ expected to be multiplied for a one-unit increase in `FEV1?`
 >
 > > ## Solution
 > > 
