--- a/_episodes_rmd/03-fittingLogistic.Rmd
+++ b/_episodes_rmd/03-fittingLogistic.Rmd
@@ -9,6 +9,11 @@ objectives:
   - "Use the `jtools` and `ggplot2` packages to visualise the resulting model."
 keypoints:
 questions:
+  - "How can the relationship between a binary response variable and a continuous explanatory variable be visualised in R?"
+  - "How can a logistic regression model be fit in R?"
+  - "How can the output of a logistic regression model be interpreted in terms of the log odds in R?"
+  - "How can the output of a logistic regression model be interpreted in terms of the multiplicative change in the odds of success in R?"
+  - "How can a logistic regression model be visualised in R?"
 teaching: 10
 execises: 10
 ---
@@ -25,11 +30,9 @@ library(ggplot2)
 library(jtools)
 ```
 
-In this episode we will learn to fit a logistic regression model when we have one binary response variable and one continuous explanatory variable. Before we fit the model, we can explore the relationship between our variables graphically. We are checking whether, on average, observations split along the binary variable appear to differ in the explanatory variable.
+In this episode we will learn to fit a logistic regression model when we have one binary response variable and one continuous explanatory variable. Before we fit the model, we can explore the relationship between our variables graphically. We are getting a sense of whether, on average, observations split along the binary variable appear to differ in the explanatory variable.
 
 Let us take response variable `SmokeNow` and the continuous explanatory variable `Age` as an example. For participants that have smoked at least 100 cigarettes in their life, `SmokeNow` denotes whether they still smoke. The code below drops NAs in the response variable. The plotting is then initiated using `ggplot()`. Inside `aes()`, we select the response variable with `y = SmokeNow` and the continuous explanatory variable with `x = Age`. Finally, violin plots are called using `geom_violin()`.
-
-The plot suggests that on average, participants of younger age are still smoking and participants of older age have given up smoking. We can now proceed with fitting the logistic regression model. 
 
 ```{r explore SmokeNow_Age}
 dat %>%
@@ -37,6 +40,8 @@ dat %>%
   ggplot(aes(y = SmokeNow, x = Age)) +
   geom_violin() 
 ```
+
+The plot suggests that on average, participants of younger age are still smoking and participants of older age have given up smoking. After the exercise, we can proceed with fitting the logistic regression model. 
 
 > ## Exercise  
 > You have been asked to model the relationship between 
@@ -100,7 +105,7 @@ summ(SmokeNow_Age, digits = 3, exp = TRUE)
 ```
 
 The model therefore predicts that the odds of success will be multiplied by
-$0.947$ for every one-unit increase in $x_1$
+$0.947$ for every one-unit increase in $x_1$.
 
 > ## Exercise  
 > 1. Using the `glm()` command, fit a logistic regression model
@@ -115,7 +120,7 @@ $0.947$ for every one-unit increase in $x_1$
 > to differ, on average, for a one-unit difference in `FEV1`?  
 > C) Given these values and the names of the response and explanatory
 > variables, how can the general equation $\text{logit}(E(y)) = \beta_0 + \beta_1 \times x_1$ be adapted to represent the model?  
-> D) By how much is $\frac{\text{Pr}(\text{PhysActive})}{\text{Pr}(\text{PhysActive})} = \text{No}$ expected to be multiplied for a one-unit increase in `FEV1?`
+> D) By how much is $\frac{\text{Pr}(\text{PhysActive} = \text{Yes})}{\text{Pr}(\text{PhysActive} = \text{No})}$ expected to be multiplied for a one-unit increase in `FEV1?`
 >
 > > ## Solution
 > > 
@@ -156,10 +161,12 @@ with `pred = Age`. To aid interpretation of the model, we include the original d
 with `plot.points = TRUE`. Recall that our data is binary, so the data points are exclusively
 $0$s and $1$s. To avoid overlapping points becoming hard to interpret, we add jitter using
 `jitter = c(0.1, 0.05)` and opacity using `point.alpha = 0.1`. 
+We also change the y-axis label to "Pr(SmokeNow = Yes)" using `ylab()`. 
 
 ```{r plot SmokeNow_Age}
 effect_plot(SmokeNow_Age, pred = Age, plot.points = TRUE,
-            jitter = c(0.1, 0.05), point.alpha = 0.1)
+            jitter = c(0.1, 0.05), point.alpha = 0.1) +
+  ylab("Pr(SmokeNow = Yes)")
 ```
 
 > ## Exercise  
