re-introduce data import at each episode, to check obtain_data.R works for the episode materials

--- a/_episodes_rmd/01-introBinary.Rmd
+++ b/_episodes_rmd/01-introBinary.Rmd
@@ -21,8 +21,7 @@ execises: 10
 ---
 ```{r, include=FALSE}
 source("../bin/chunk-options.R")
-# source("../bin/obtain_data.R")
-load("../bin/data.RData")
+source("../bin/obtain_data.R")
 knitr_fig_path("01-")
 library(dplyr)
 library(tidyr)
