--- a/_episodes_rmd/01-introBinary.Rmd
+++ b/_episodes_rmd/01-introBinary.Rmd
@@ -68,7 +68,8 @@ of failure is estimated as $0.62$. In mathematical notation:
 $\text{Pr}(\text{SmokeNow} = \text{Yes}) = 0.38$ and $\text{Pr}(\text{SmokeNow} = \text{No}) = 0.62$.
 
 You may have noticed that the probabilities of success and failure add to 1. 
-This is true as a general rule. Therefore, the probability of success equals
+This is true because there are only two possible outcomes for a binary explanatory variable.
+Therefore, the probability of success equals
 1 minus the probability of failure: $\text{Pr}(\text{Success}) = 1 - \text{Pr}(\text{Failure})$.
 
 In the linear regression lessons, we modelled the *expectation* of the outcome 
