--- a/_episodes_rmd/04-predLogistic.Rmd
+++ b/_episodes_rmd/04-predLogistic.Rmd
@@ -16,7 +16,8 @@ execises: 10
 
 ```{r, include=FALSE}
 source("../bin/chunk-options.R")
-source("../bin/obtain_data.R")
+#source("../bin/obtain_data.R")
+load("../bin/data.RData")
 knitr_fig_path("04-")
 library(dplyr)
 library(tidyr)
