--- a/_episodes_rmd/05-assumpLogistic.Rmd
+++ b/_episodes_rmd/05-assumpLogistic.Rmd
@@ -10,7 +10,8 @@ execises: 10
 
 ```{r, include=FALSE}
 source("../bin/chunk-options.R")
-source("../bin/obtain_data.R")
+#source("../bin/obtain_data.R")
+load("../bin/data.RData")
 knitr_fig_path("03-")
 ```
 
